# slate

./: CMakeLists.txt  CMakePresets.json  README.md  meson.build  vcpkg.json
include/: slate.hpp
test/: aggregate.cpp  convert.cpp  error.cpp  function.cpp  iterate.cpp  optional.cpp  serializer.cpp  transaction.cpp  tuple.cpp
